# CourseGraph

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  README_en.md  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
course_graph/: __init__.py  log.py
course_graph/agent/: __init__.py  agent.py  controller.py  tool.py  tools.py  types.py
course_graph/database/: __init__.py  mongo.py  neo4j.py  vector.py
course_graph/kg/: __init__.py
course_graph/llm/: __init__.py  config.py  llm.py  mllm.py  mlm.py  ontology.py  parser_prompt.py  prompt.py  prompt_strategy.py  type.py  vision_prompt.py  visual_prompt.py  vl_prompt.py  vlm.py
course_graph/parser/: __init__.py  base.py  bookmark.py  config.py  document.py  docx_parser.py  entity.py  parser.py  pdf_parser.py  utils.py
course_graph/parser/pdf_parser/: __init__.py  ocr_model.py  pdf_parser.py  pdf_parser_mode.py  structure_model.py
course_graph/resource/: __init__.py  resource.py  utils.py
coursekg/agent/: __init__.py  tools.py
coursekg/document_parser/: base.py  pdf_parser.py
coursekg/llm/: __init__.py  config.py  llm.py  mllm.py  prompt.py  prompt_strategy.py  type.py  visual_lm.py  visual_prompt.py
coursekg/parser/: __init__.py  base.py  config.py  docx_parser.py  parser.py  pdf_parser.py  utils.py
coursekg/resource/: resource.py  utils.py
dataset/image_example/: example.json
detector/: README.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.css  index.ts
docs/.vitepress/theme/components/: ArticleMetadata.vue
docs/.vitepress/theme/style/: index.css
docs/tutorials/: agent.md
docs/tutorials/agent/: agent.md  kg.md
docs/tutorials/other/: dob.md  rust.md
examples/: agent_orchestration.py  agent_orchestration2.py  get_knowledge_graph.py  get_knowledge_graph_pdf.py  knowledge_server.py  pdf_parser_llm.py  prompt_example.py  prompt_example_reimport.py  set_resources.py
examples/agent/: agent_orchestration.py  agents.py  interrupt_conversation.py  mcp_server.py  use_mcp.py  workflow.py  workflow_orchestration.py
experimental/: README.md
experimental/data/origin_data/: pipeline.py
experimental/results/train_ner_model/: README.md
experimental/results/train_re_model/: README.md
experimental/scripts/: exp_ner_prompt.py  overview.py
experimental/scripts/ke/: __init__.py  config.py  dataset.py  model.py  predict.py  train_with_trainer.py
experimental/scripts/ner/: __init__.py  config.py  dataset.py  main.py  model.py  predict.py  swanlab-init-config.yaml  train_with_trainer.py
experimental/scripts/prompt/: __init__.py  eval.py  main.py  metric.py  ner.py
rust/: Cargo.toml  extension.pyi  make.sh
rust/src/: lib.rs
rust/src/ext/: common.rs
rust/src/extensions/: common.rs  mod.rs
rust_ext/: Cargo.toml  course_graph_ext.pyi  rust_ext.pyi
rust_ext/src/: ext.rs  lib.rs
rust_ext/src/ext/: common.rs  structure.rs
src/: lib.rs
src/course_graph/: __init__.py  _core.pyi  log.py  version.py
src/course_graph/agent/: __init__.py  agent.py  controller.py  exception.py  mcp.py  teams.py  tool.py  trace.py  types.py  utils.py
src/course_graph/cli/: __init__.py
src/course_graph/database/: __init__.py  mongo.py  neo4j.py  neo4j_.py  singleton.py  vector.py
src/course_graph/kg/: __init__.py  api.py  api_key.py  api_model.py  model.py
src/course_graph/llm/: __init__.py  api.py  config.py  llm.py  ontology.py  parser_prompt.py  prompt.py  prompt_strategy.py  type.py  types.py  vl_prompt.py  vlm.py
src/course_graph/llm/prompt/: __init__.py  extract_prompt.py  filter.py  parser_prompt.py  prompt.py  prompt_strategy.py  utils.py  vl_prompt.py
src/course_graph/parser/: __init__.py  config.py  core.py  document.py  docx_parser.py  entity.py  parser.py  type.py  types.py  utils.py
src/course_graph/parser/pdf_parser/: ocr_model.py  pdf_parser.py  structure_model.py
src/course_graph/resource/: resource.py
src/course_graph_ext/: course_graph_ext.pyi
src/course_graph_ext/src/ext/: common.rs
