[package]
name = "course_graph_ext"
version = "0.1.0"
edition = "2021"
include = ['src/**/*', 'Cargo.toml', 'course_graph_ext.pyi']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "course_graph_ext"
crate-type = ["cdylib"]

[dependencies]
regex = "1"
rand = "0.8"
pyo3 = { version = "0.22.0", features = ["extension-module"] }
